--- a/index.html
+++ b/index.html
@@ -559,6 +559,7 @@ document.querySelector('ul.examples li.message-html button').onclick = function(
 		text: 'A custom <span style="color:#F8BB86">html<span> message.',
 		html: true
 	});
+	swal.showInputError();
 };
 
 document.querySelector('ul.examples li.input button').onclick = function(){
